--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -7,7 +7,7 @@
           <h4 class=" card-title">Simple Table</h4>
         </div>
         <div class=" card-body">
-          <div class=" table-responsive">
+          <div class=" no-bars table-responsive">
             <table class=" table tablesorter" id="">
               <thead class=" text-primary">
                 <tr>
@@ -73,7 +73,7 @@
           <p class=" category">Here is a subtitle for this table</p>
         </div>
         <div class=" card-body">
-          <div class=" table-responsive">
+          <div class=" no-bars table-responsive">
             <table class=" table tablesorter" id="">
               <thead class=" text-primary">
                 <tr>
